# construction-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  REFACTORING.md  SETUP.md  pyproject.toml  requirements.txt  run_agent.py  test_interactive.py
.claude/: CHANGELOG.md  DECISIONS.md  NEXT_STEPS.md  STATUS.md
docs/: COMO_ENVIAR_DOCUMENTOS.md  CONFIGURATION.md  DEBUGGING.md  DEBUG_MODE.md  EMBEDDINGS.md  EMBEDDINGS_EXPLAINED.md  ENTRY_POINTS.md  EXAMPLES.md  EXTRACTION_STRATEGY.md  GUIA_RAPIDO.md  QUICK_START.md  SECURITY.md  UNMAPPED_FIELDS.md
newdocs/: sample_bid_tabulation.csv
scripts/: demo.py  quick_pdf_search.py  run_agent.py  upload_documents.py
src/: __init__.py  config.py  demo.py  logging_config.py  main.py
src/agent/: core.py  prompts.py  tools.py
src/agent/executors/: __init__.py  anthropic.py  base.py  factory.py  mock.py
src/agent/prompts/: __init__.py  examples.py  system.py
src/agent/tools/: __init__.py  aggregate_items.py  base.py  compare_bidders.py  definitions.py  detect_outliers.py  search.py
src/analysis/: aggregations.py  comparisons.py  outliers.py
src/cli/: __init__.py  interactive_shell.py
src/data/: converters.py  document_loader.py  loaders.py  models.py  parsers.py  pdf_parser.py  validators.py
src/data/indexers/: __init__.py  base.py  csv_indexer.py  factory.py  orchestrator.py  pdf_indexer.py
src/data/models/: __init__.py  bid_item.py  bidder.py  data_quality.py  pdf_content.py  project.py  unmapped_field.py
src/data/parsers/: __init__.py  csv_parser.py  pdf_parser.py
src/indexing/: __init__.py  indexer.py
src/ui/: __init__.py  file_loader.py
src/vectorstore/: embeddings.py  retrieval.py  similarity.py  storage.py
src/vectorstore/embeddings/: __init__.py  base.py  mock.py  openai.py
src/vectorstore/storage/: __init__.py  base.py  mock.py  sqlite.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_agent_e2e.py  test_retrieval.py  test_vectorstore.py
tests/unit/: test_agent.py  test_analysis.py  test_config.py  test_embeddings.py  test_interactive.py  test_models.py  test_parsers.py  test_pdf_agent.py  test_pdf_extraction.py  test_unmapped_fields.py  test_validators.py
