[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construction-agent"
version = "1.0.0"
description = "AI-powered agent for construction bid analysis"
requires-python = ">=3.11"
authors = [
    {name = "Claude Haiku 4.5", email = "noreply@anthropic.com"}
]
dependencies = [
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "PyPDF2==4.0.1",
    "pytesseract==0.3.10",
    "Pillow==10.1.0",
    "openai==1.3.6",
    "anthropic==0.7.9",
    "sqlite-vec==0.1.0",
    "click==8.1.7",
    "rich==13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
]

api = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
