[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construction-agent"
version = "1.0.0"
description = "AI-powered agent for construction bid analysis"
requires-python = ">=3.11"
authors = [
    {name = "Cristiano dos Santos Lemos", email = "cris.cjinf@gmail.com"}
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "PyPDF2>=3.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "sqlite-vec>=0.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]

api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
agent = "src.main:main"
agent-demo = "src.demo:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
